--- a/18_DBSCAN+-+Detección+de+transacciones+bancarias+fraudulentas.ipynb
+++ b/18_DBSCAN+-+Detección+de+transacciones+bancarias+fraudulentas.ipynb
@@ -4178,10 +4178,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label -1 has 1 samples - 1 are malicious samples\n",
+      "Label 0 has 499 samples - 499 are malicious samples\n",
+      "Label 1 has 500 samples - 0 are malicious samples\n"
+     ]
+    }
+   ],
+   "source": [
+    "counter = Counter(dbscan.labels_.tolist())\n",
+    "bad_counter = Counter(dbscan.labels_[y==1].tolist())\n",
+    "for key in sorted(counter.keys()):\n",
+    "    print(\"Label {0} has {1} samples - {2} are malicious samples\".format(key, counter[key], bad_counter[key]))"
+   ]
   },
   {
    "cell_type": "code",
